--- a/style.css
+++ b/style.css
@@ -1,184 +1,173 @@
-*
-{
+*{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
 }
-header{
-    width: 100%;
-    height: 100vh;
-    background-image: linear-gradient(to left, #cccccc 55%,#c3f5ff 20%);
+body{
+    background-color: #e3e3e3;
+
 }
-.navsection{
-    width: 100%;
-    height: 20vh;
-    /*background-color: yellow;*/
-    display: flex;
-    justify-content:space-around;
-    align-items: center;
-    background-image: linear-gradient(to top, #111111 80%,#c3f5ff 20%);
-}
-.logo{
-    width: 40%;
-    color: #fff;
-    background-image: linear-gradient(#8d98e3 40%,#854fee 60%);
-    padding-left: 100px;
-    box-sizing: border-box;
-}
-.logo >h1{
-    text-transform: uppercase;
-    font-size: 1.6rem;
-    animation: aagepiche 2s linear infinite;
-    animation-duration: alternate;
-}
-@keyframes aagepiche{
-    from{padding-left:  40px;}
-    to{ padding-right: 40px; }
+.container{
+    width: 1000px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 20px;
+    
 }
 
 nav{
-    width: 60%;
-    display: flex;
-    justify-content: space-around;
+    background-color: #008899;
 }
-nav a{
+nav>a{
+    color: #ffffff;
     text-decoration: none;
-    text-transform: uppercase;
-    color: #fff;
-    font-weight: 900;
-    font-size: 17px;
-    position: relative;
-}
-nav >a:first-child{
-    color: #4458dc;
-}
-nav >a:first-child{
-    color: #4458dc;
-}
-nav>a::before{
-    content: " ";
-    position: absolute;
-    top: 110%;
-    left: 0;
-    width: 0%;
-    height: 2px;
-    color: none;
-    border-bottom: 2px solid #4458dc;
-    transition: all 0.4s linear;
-}
-nav>a:hover:before{
-        width: 100%;
-}
-nav>a:first-child:hover{
-    color: red;
-}
-nav>a:hover{
-    color:palegreen;
-}
-nav>a:last-child:hover{
-    color:goldenrod;
-}
-main{
-    height: 80vh;
-    display: flex;
-    justify-content:space-around;
-    align-items:center
-    
-}
-.rightside{
-
-}
-.rightside>img{
-    max-width: 500px;
-    height: 300px;
-}
-.leftside{
-    color: #000000;
-    text-transform: uppercase;
-}
-.rightside>h3{
     font-size: 40px;
-    margin-bottom: 20px;
-    position: relative;
-
+    padding: 10px 10px 10px 30px;
+    float: left;
+}
+.navbar>ul{
+    list-style:none;
+    float: right;
 
 }
-.leftside>h4:after{
+nav::after{
     content: "";
-    width: 365px;
-    height: 1.5px;
-    position: absolute;
-    top: 45%;
-    left: 17%;
-    background-color: #000000;
+    display: block;
+    clear: both;
+    zoom: 1;
 }
-.leftside>h1{
-    margin-top: 20px;
-    margin-left: 60px;
-    font-size: 40px;
-    margin-bottom: 25px;
+.navbar>ul>li{
+    display: inline-block;
+    line-height: 60px;
+    padding: 0px 20px;
+
 }
-.leftside>h2{
-    margin-bottom: 35px;
-    font-weight: 500;
-    word-spacing: 4px;
-    margin-left: 80px;
+.navbar>ul:last-child{
+    padding-right: 100px;
 }
-.leftside>h4{
-    margin-bottom: 20px;
-    font-weight: 500;
-    word-spacing: 4px;
-    margin-left: 80px;
+.navbar>ul>li>a{
+    text-decoration: none;
     font-size: 18px;
+    color: #ffffff;
+
+}
+.navbar>ul>li:hover{
+    background-color:rgba(0, 0, 0, 0.1);
+}
+.main-banner{
+    height: 400px;
+}
+.main-banner>img{
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
+
+}
+.service{
+    width: 100%;
+    height: 500px;
+    background-color: white;
+
+}
+.service>h1{
+    font-size: 40px;
+    text-align: center;
+    padding-top: 120px;
+    padding-bottom: 30px;
+    position: relative;
 }
 
+.col{
+    width: 300px;
+    height: 300px;
+    text-align: center;
+    margin-left: 20px;
+    border-right: solid #bebebe 1px;
+    padding-bottom: 30px;
+    float: left;
 
-.leftside .btn1{
+
+}
+.col:last-child{
+    border-right: none;
+}
+.col>h3{
+    padding: 30px ;
+    color: darkgray;
+    padding-top: 40px;
+    font-size: 26px;
+}
+.col>p{
+    padding-bottom: 40px;
+}
+.col>a{
+    background-color: #089de3;
+    color: #ffffff;
+    font-size: 17px;
     text-decoration: none;
-    font-weight: 900;
-    font-size: 14px;
-    text-align: center;
-    padding: 12px 25px;
-    cursor: pointer;
-    text-transform: uppercase;
-    border-radius: 5px;
-    display: inline-block;
-    margin-right: 50px;
-    margin-left: 70px;
-    color: #fff;
-    letter-spacing: 0;
-    background-image: linear-gradient(to right,#4458dc 0%, #854fee 100%);
-    border: double 2px transparent;
-    box-shadow: 0 10px 30px rgba(118,85,225,.3);
+    border: solid white 2px;
+    padding: 5px 10px;
+    border-radius: 20px;
 }
-.leftside .btn2{
+.col>a:hover{
+    background-color: rgba(0, 0, 0, 0.5);
+    border: solid #111111 2px;
+    border: none;
+}
+.col>i{
+
+    font-size: 70px;
+}
+.service::after{
+    content: "";
+    display: block;
+    clear: both;
+    zoom: 1;
+}
+.customer{
+    background-color: #089de3;
+    min-height: 300px;
+    text-align: center;
+    padding: 20px;
+    color: #ffffff;
+    padding-bottom: 30px;
+}
+.customer>h1{
+    font-size: 30px;
+    padding-bottom: 20px;
+}
+.customer>img{
+    margin: 10px;
+    border: solid 2px;
+    width: 120px;
+    height: 100px;
+    border-radius: 50px;
+    object-fit: cover;
+}
+.customer>p{
+    font-size: 18px;
+    margin: 10px 200px;
+    padding-bottom: 10px;
+    line-height: 25px;
+}
+.customer>a{
+    color: #ffffff;
+    font-size: 17px;
     text-decoration: none;
-    font-weight: 900;
-    font-size: 14px;
+    border: solid white 1px;
+    padding: 5px 20px;
+}
+.customer>a:hover{
+    background-color: rgba(0, 0, 0, 0.3);
+    border: solid #111111 1px;
+}
+footer{
+    background-color: #111111;
     text-align: center;
-    padding: 12px 25px;
-    cursor: pointer;
-    text-transform: uppercase;
-    border-radius: 5px;
-    display: inline-block;
-    margin-right: 50px;
-    border: 2px solid #4458dc;
-    color: #222222;
-    background-color: #fff;
-    box-shadow: none;
+    padding: 10px;
+
 }
-.leftside .btn1:hover{
-    border: 2px solid #4458dc;
-    color: #222222;
-    background-color: #fff;
-    box-shadow: none;
-    background-image: none; 
+footer>small{
+    color: #ffffff;
 }
-.leftside .btn2:hover{
-   
-    color: #fff;
-    letter-spacing: 0;
-    background-image: linear-gradient(to right,#4458dc 0%, #854fee 100%);
-    border: double 2px transparent;
-    box-shadow: 0 10px 30px rgba(118,85,225,.3);
-}
+
